edit mobile alignment issues, ready for review cont.

--- a/styles.scss
+++ b/styles.scss
@@ -265,7 +265,7 @@ footer {
     }
 
     p {
-        grid-row: 2;;
+        grid-row: 2;
         display: flex;
         justify-self: center;
         align-self: end;
